# dynamic-qr

./: .env  .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs
src-tauri/target-installer/: .rustc_info.json
src-tauri/target-installer/release/: dynamic_qr_system.d
src-tauri/target-installer/release/.fingerprint/adler2-b86958d2ec1c7c8a/: lib-adler2  lib-adler2.json
src-tauri/target-installer/release/.fingerprint/aho-corasick-0eb420f6ff882b92/: lib-aho_corasick  lib-aho_corasick.json
src-tauri/target-installer/release/.fingerprint/aho-corasick-4ab077b5c25aefdd/: lib-aho_corasick  lib-aho_corasick.json
src-tauri/target-installer/release/.fingerprint/alloc-no-stdlib-1120b5b7c5bc9916/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
src-tauri/target-installer/release/.fingerprint/alloc-no-stdlib-e1aadc60a1a5e9ca/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
src-tauri/target-installer/release/.fingerprint/alloc-stdlib-1e21ee12066b53d2/: lib-alloc_stdlib  lib-alloc_stdlib.json
src-tauri/target-installer/release/.fingerprint/alloc-stdlib-ff2010fc9b2fe02f/: lib-alloc_stdlib  lib-alloc_stdlib.json
src-tauri/target-installer/release/.fingerprint/anyhow-07367ea8806e6d75/: run-build-script-build-script-build  run-build-script-build-script-build.json
src-tauri/target-installer/release/.fingerprint/anyhow-4f3638ef43dce6f6/: lib-anyhow  lib-anyhow.json
(+878 files in other folders)
