[package]
name = "dynamic_qr_system"
version = "0.1.0"
description = "A Tauri desktop application for managing dynamic QR codes"
authors = ["Dynamic QR System"]
edition = "2021"

[lib]
name = "dynamic_qr_system_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dotenvy = "0.15"
odbc-api = "25"
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.13.3", features = ["json"] }
