[package]
name = "busypay_qr"
version = "1.0.0"
description = "Dynamic QR payment integration for Busy accounting software via Fonepay"
authors = ["Innovus LLC"]
edition = "2021"

[lib]
name = "busypay_qr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dotenvy = "0.15"
odbc-api = "25"
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.13.3", features = ["json"] }
